sign in with phone number

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+
 
     <application
         android:allowBackup="true"
@@ -15,6 +17,12 @@
         android:theme="@style/Theme.Music_App1"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".View.EnterOtpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.VerifyPhoneNumberActivity"
+            android:exported="false" />
         <activity
             android:name=".View.SignUpActivity"
             android:exported="false" />
@@ -33,9 +41,6 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Search"
             android:exported="false" />
     </application>
 
