--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/Theme.Music_App1"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <activity
             android:name=".View.SignUpActivity"
             android:exported="false" />
@@ -33,7 +34,9 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize"
+            />
         <activity
             android:name=".Search"
             android:exported="false" />
