--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".UpdateInfomationActivity"
+            android:name=".View.UpdateInfomationActivity"
             android:exported="false"
             android:theme="@style/Theme.Music_App1">
         </activity>
